fixed bug with local storage

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <img src="./pictures/per.jpg" id="increment-btn" onclick="increment()" />
 
     <aside>
-      <div class="upgrade" id="buy1" onclick="buyup(1)">
+      <div class="upgrade" id="buy1" onclick="buyUp(1)">
         HTML +1 click POW <span class="buy1M">10$</span>
       </div>
       <div class="upgrade" id="buy2" onclick="buyUp(2)">
