header fixed more color

--- a/index.html
+++ b/index.html
@@ -24,23 +24,26 @@
     <!--⇧ This is for the over menu ⇧-->
 
     <!--⇩ this holds the top menu and its items ⇩-->
-    <header id="header-Items">
+    <header class="row" id="header-overHead">
+      <aside id="cut-out"></aside>
+      <aside id="header-Items" class="row"></aside>
     </header>
     <!--⇧ this holds the top menu and its items ⇧-->
 
     <main>
+      <!--⇩ this holds all the diffrent upgrades ⇩-->
+      <aside id="buy-menu"> 
+      </aside> 
+      <!--⇧ this holds all the diffrent upgrades ⇧-->
+      <section id="img-cont"> 
+      </section>
+
         <aside id="moneyBar">
           <h2>$</h2>
           <h2 id="money-el">0</h2>
         </aside>
       
-        <section id="img-cont"> 
-        </section>
       
-        <!--⇩ this holds all the diffrent upgrades ⇩-->
-        <aside id="buy-menu"> 
-        </aside> 
-        <!--⇧ this holds all the diffrent upgrades ⇧-->
     </main>
     </body>
     </html>
