--- a/index.html
+++ b/index.html
@@ -30,10 +30,12 @@
     </header>
     <!--⇧ this holds the top menu and its items ⇧-->
 
-    <main>
+    <main class="row">
       <!--⇩ this holds all the diffrent upgrades ⇩-->
-      <aside id="buy-menu"> 
-      </aside> 
+      <div id="buy-menu-wrapper">
+        <aside id="buy-menu" class="column"> 
+        </aside> 
+      </div>
       <!--⇧ this holds all the diffrent upgrades ⇧-->
       <section id="img-cont"> 
       </section>
