--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
       <section id="img-cont"> 
       </section>
 
-        <aside id="moneyBar">
-          <h2>$</h2>
+        <aside id="moneyBar" class="row">
+          <h2 id="cash-sign">$ |</h2>
           <h2 id="money-el">0</h2>
         </aside>
       
