--- a/index.html
+++ b/index.html
@@ -32,6 +32,9 @@
     </header>
     <!--⇧ this holds the top menu and its items ⇧-->
 
+    <section id="break-Line-style"></section>
+
+
     <main class="row">
       <!--⇩ this holds all the diffrent upgrades ⇩-->
       <div id="buy-menu-wrapper">
